--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>SUBSTREAM by SUBBEAT</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?126034594"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?130729873" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?521802533" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?3824334554"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?424669817"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -128,10 +128,11 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="u150-4"><!-- content -->
      <p><span id="u150">CREDIT</span></p>
     </div>
-    <div class="clearfix colelem" id="u151-18"><!-- content -->
+    <div class="clearfix colelem" id="u151-23"><!-- content -->
      <p>Presented by <span id="u151-2">SUBBEAT</span>.</p>
      <p>Produced by <span id="u151-6">beatbird</span>, <a class="nonblock" href="http://mondaystudio.net/" target="_blank"><span id="u151-8">mondaystudio</span></a>.</p>
      <p>Designed and Web Developed by <a class="nonblock" href="http://mondaystudio.net/" target="_blank"><span id="u151-13">mondaystudio</span></a>.</p>
+     <p>Streaming by <a class="nonblock" href="http://www.datafruits.fm/" target="_blank"><span id="u151-18">datafruits</span></a>.</p>
     </div>
     <div class="verticalspacer"></div>
     <div class="clearfix colelem" id="u152-5"><!-- content -->
