타임테이블 수정.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ var __adobewebfontsappname__ = "muse";
       <p>4:00</p>
       <p>5:00</p>
       <p>6:00</p>
-      <p>7:00</p>
+      <p>7:20</p>
      </div>
      <div class="clearfix grpelem" id="u182-6"><!-- content -->
       <p>*Undelined time is</p>
@@ -129,7 +129,7 @@ var __adobewebfontsappname__ = "muse";
       <p>7:00</p>
       <p>8:00</p>
       <p>9:00</p>
-      <p>10:00</p>
+      <p>10:20</p>
      </div>
      <div class="clearfix grpelem" id="u166-34"><!-- content -->
       <p>CET</p>
@@ -147,7 +147,7 @@ var __adobewebfontsappname__ = "muse";
       <p>13:00</p>
       <p>14:00</p>
       <p>15:00</p>
-      <p>16:00</p>
+      <p>16:20</p>
      </div>
      <div class="clearfix grpelem" id="u169-34"><!-- content -->
       <p>AUS</p>
@@ -165,7 +165,7 @@ var __adobewebfontsappname__ = "muse";
       <p>22:00</p>
       <p>23:00</p>
       <p>0:00</p>
-      <p>1:00</p>
+      <p>1:20</p>
      </div>
      <div class="clearfix grpelem" id="u165-34"><!-- content -->
       <p>GMT</p>
@@ -183,7 +183,7 @@ var __adobewebfontsappname__ = "muse";
       <p>12:00</p>
       <p>13:00</p>
       <p>14:00</p>
-      <p>15:00</p>
+      <p>15:20</p>
      </div>
      <div class="clearfix grpelem" id="u167-34"><!-- content -->
       <p>JST/KST</p>
@@ -201,7 +201,7 @@ var __adobewebfontsappname__ = "muse";
       <p>21:00</p>
       <p>22:00</p>
       <p>23:00</p>
-      <p>0:00</p>
+      <p>0:20</p>
      </div>
      <div class="clearfix grpelem" id="u168-34"><!-- content -->
       <p>DJ</p>
@@ -210,13 +210,13 @@ var __adobewebfontsappname__ = "muse";
       <p>Sata</p>
       <p>Sima Kim</p>
       <p>Cong Vu</p>
+      <p>oblongar</p>
       <p>KIM KATE.</p>
       <p>DJ Hojo</p>
-      <p>bassmicrobe</p>
       <p>Howie Lee</p>
-      <p>Californina Games</p>
+      <p>California Games</p>
+      <p>bassmicrobe</p>
       <p>beatbird</p>
-      <p>oblongar</p>
       <p>Firedrill</p>
       <p>mondaystudio</p>
       <p>mus.hiba</p>
