--- a/substream01/phone/index.html
+++ b/substream01/phone/index.html
@@ -13,7 +13,7 @@
   <link rel="canonical" href="http://subbe.at/index.html"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?126034594"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3961454238" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?268777098" id="pagesheet"/>
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?3815265931"/>
   <![endif]-->
@@ -93,7 +93,7 @@ var __adobewebfontsappname__ = "muse";
      <p>4:00</p>
      <p>5:00</p>
      <p>6:00</p>
-     <p>7:00</p>
+     <p>7:20</p>
     </div>
     <div class="clearfix grpelem" id="u323-34"><!-- content -->
      <p>GMT</p>
@@ -111,7 +111,7 @@ var __adobewebfontsappname__ = "muse";
      <p>12:00</p>
      <p>13:00</p>
      <p>14:00</p>
-     <p>15:00</p>
+     <p>15:20</p>
     </div>
     <div class="clearfix grpelem" id="u324-34"><!-- content -->
      <p>J/KST</p>
@@ -129,7 +129,7 @@ var __adobewebfontsappname__ = "muse";
      <p>21:00</p>
      <p>22:00</p>
      <p>23:00</p>
-     <p>0:00</p>
+     <p>0:20</p>
     </div>
     <div class="clearfix grpelem" id="u325-34"><!-- content -->
      <p>DJ</p>
@@ -138,13 +138,13 @@ var __adobewebfontsappname__ = "muse";
      <p>Sata</p>
      <p>Sima Kim</p>
      <p>Cong Vu</p>
+     <p>oblongar</p>
      <p>KIM KATE.</p>
      <p>DJ Hojo</p>
-     <p>bassmicrobe</p>
      <p>Howie Lee</p>
-     <p>Californina Games</p>
+     <p>California Games</p>
+     <p>bassmicrobe</p>
      <p>beatbird</p>
-     <p>oblongar</p>
      <p>Firedrill</p>
      <p>mondaystudio</p>
      <p>mus.hiba</p>
@@ -165,7 +165,7 @@ var __adobewebfontsappname__ = "muse";
      <p>7:00</p>
      <p>8:00</p>
      <p>9:00</p>
-     <p>10:00</p>
+     <p>10:20</p>
     </div>
     <div class="rgba-background grpelem" id="u327"><!-- simple frame --></div>
     <div class="rgba-background grpelem" id="u328"><!-- simple frame --></div>
