--- a/phone/index.html
+++ b/phone/index.html
@@ -140,7 +140,7 @@
      </div>
      <div class="clearfix grpelem" id="u168-6"><!-- content -->
       <p>2013&#45;12&#45;07 SAT</p>
-      <p>Cakeshop Seoul</p>
+      <p>VENUE/</p>
      </div>
     </div>
     <div class="clearfix colelem" id="u163-4"><!-- content -->
