--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
      </div>
      <div class="clearfix grpelem" id="u110-6"><!-- content -->
       <p>2013&#45;12&#45;07 SAT</p>
-      <p>Cakeshop Seoul</p>
+      <p>VENUE/</p>
      </div>
     </div>
     <div class="clearfix colelem" id="u109-4"><!-- content -->
