--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        </div>
       </div>
       <div class="clearfix colelem" id="u94-4"><!-- content -->
-       <p>mondaystudio, LOBOTOMY, lobotomy</p>
+       <p>mondaystudio, LOBOTOMY, beatbird</p>
       </div>
       <div class="clearfix colelem" id="u82-4"><!-- content -->
        <p>Past Events:</p>
