--- a/phone/index.html
+++ b/phone/index.html
@@ -13,7 +13,7 @@
   <link rel="canonical" href="http://subbe.at/index.html"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?4273054669"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?433613906" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?453886039" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -44,8 +44,8 @@
       <p>Cakeshop Seoul</p>
      </div>
     </div>
-    <div class="clearfix colelem" id="u146-4"><!-- content -->
-     <p>mondaystudio, LOBOTOMY, lobotomy</p>
+    <div class="clearfix colelem" id="u176-4"><!-- content -->
+     <p>mondaystudio, LOBOTOMY, beatbird</p>
     </div>
     <div class="clearfix colelem" id="u149-36"><!-- content -->
      <p><span id="u149">SUBBEAT</span> is</p>
