SUBBEAT w/ TREKKIE TRAX 업데이트
SUBBEAT w/ TREKKIE TRAX 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "museredirect.js", "index.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museredirect.js", "jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "index.css"], "outOfDate":[]};
 </script>
   
   <script src="scripts/museredirect.js?4117159434" type="text/javascript"></script>
@@ -18,7 +18,7 @@
   <link media="only screen and (max-device-width: 370px)" rel="alternate" href="http://subbe.at/phone/index.html"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4047461162"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?219909834" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3944616292" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -55,18 +55,38 @@
       <div class="clearfix colelem" id="u111-4"><!-- content -->
        <p>Upcoming Events:</p>
       </div>
-      <div class="clearfix colelem" id="pu80-6"><!-- group -->
-       <a class="nonblock nontext Link clearfix grpelem" id="u80-6" href="https://www.facebook.com/events/488866214594608/" target="_blank"><!-- content --><p>SUBBEATvol06</p><p>with PARKGOLF</p></a>
+      <div class="clearfix colelem" id="pu80-10"><!-- group -->
+       <a class="nonblock nontext Link clearfix grpelem" id="u80-10" href="https://www.facebook.com/events/678876412212742/" target="_blank"><!-- content --><p>SUBBEAT w/</p><p>TREKKIE TRAX</p><p>(Capainter, Seimei)</p><p id="u80-8">+ Seimei's &quot;Out Of Resistance&quot; Release Tour</p></a>
        <div class="clearfix grpelem" id="u81-6"><!-- content -->
-        <p>2015-05-08 FRI</p>
+        <p>2015-07-24 FRI</p>
         <p>Cakeshop Seoul</p>
        </div>
       </div>
       <div class="clearfix colelem" id="u94-4"><!-- content -->
-       <p>mondaystudio, LOBOTOMY, beatbird</p>
+       <p>Carpainter, Seimei, YonYon, mondaystudio, LOBOTOMY, beatbird</p>
       </div>
       <div class="clearfix colelem" id="u82-4"><!-- content -->
        <p>Past Events:</p>
+      </div>
+      <div class="clearfix colelem" id="pu185-6"><!-- group -->
+       <a class="nonblock nontext Link clearfix grpelem" id="u185-6" href="https://www.facebook.com/events/658757987588526/" target="_blank"><!-- content --><p>SUBBEAT w/</p><p>AIR MAX '97</p></a>
+       <div class="clearfix grpelem" id="u186-6"><!-- content -->
+        <p>2015-06-12 FRI</p>
+        <p>Cakeshop Seoul</p>
+       </div>
+      </div>
+      <div class="clearfix colelem" id="u187-4"><!-- content -->
+       <p>AIR MAX '97, YonYon, Abyss x slowgiz,&nbsp; mondaystudio, LOBOTOMY, beatbird, sata</p>
+      </div>
+      <div class="clearfix colelem" id="pu176-6"><!-- group -->
+       <a class="nonblock nontext Link clearfix grpelem" id="u176-6" href="https://www.facebook.com/events/488866214594608/" target="_blank"><!-- content --><p>SUBBEATvol06</p><p>with PARKGOLF</p></a>
+       <div class="clearfix grpelem" id="u177-6"><!-- content -->
+        <p>2015-05-08 FRI</p>
+        <p>Cakeshop Seoul</p>
+       </div>
+      </div>
+      <div class="clearfix colelem" id="u178-4"><!-- content -->
+       <p>mondaystudio, LOBOTOMY, beatbird</p>
       </div>
       <div class="clearfix colelem" id="pu97-6"><!-- group -->
        <a class="nonblock nontext Link clearfix grpelem" id="u97-6" href="http://subbe.at/substream01/" target="_blank"><!-- content --><p>substream01:</p><p>online streaming event</p></a>
@@ -101,47 +121,47 @@
       <div class="clearfix colelem" id="u119-4"><!-- content -->
        <p>LOBOTOMY, F.W.D., beatbird, mondaystudio</p>
       </div>
-      <div class="clearfix colelem" id="pu85-6"><!-- group -->
-       <div class="clearfix grpelem" id="u85-6"><!-- content -->
-        <p>SUBBEATvol04</p>
-        <p>with TRAXMAN</p>
-       </div>
-       <div class="clearfix grpelem" id="u86-6"><!-- content -->
-        <p>2014-08-15 FRI</p>
-        <p>Cakeshop Seoul</p>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u96-4"><!-- content -->
-       <p>Cong Vu, Sata, beatbird, mondaystudio</p>
-      </div>
-      <div class="clearfix colelem" id="pu89-6"><!-- group -->
-       <div class="clearfix grpelem" id="u89-6"><!-- content -->
-        <p>SUBBEATvol03</p>
-        <p>with Seiho</p>
-       </div>
-       <div class="clearfix grpelem" id="u90-6"><!-- content -->
-        <p>2014-07-11 FRI</p>
-        <p>Cakeshop Seoul</p>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u104-4"><!-- content -->
-       <p>Sima Kim, Cong Vu, beatbird, mondaystudio</p>
-      </div>
-      <div class="clearfix colelem" id="pu107-8"><!-- group -->
-       <div class="clearfix grpelem" id="u107-8"><!-- content -->
-        <p>SUBBEATvol02</p>
-        <p>introducing j~wave</p>
-        <p>with mus.hiba</p>
-       </div>
-       <div class="clearfix grpelem" id="u105-6"><!-- content -->
-        <p>2014-04-04 FRI</p>
-        <p>Cakeshop Seoul</p>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u106-4"><!-- content -->
-       <p>LOBOTOMY, Sima Kim, asceticaudio., beatbird, mondaystudio</p>
-      </div>
      </div>
+    </div>
+    <div class="clearfix colelem" id="pu85-6"><!-- group -->
+     <div class="clearfix grpelem" id="u85-6"><!-- content -->
+      <p>SUBBEATvol04</p>
+      <p>with TRAXMAN</p>
+     </div>
+     <div class="clearfix grpelem" id="u86-6"><!-- content -->
+      <p>2014-08-15 FRI</p>
+      <p>Cakeshop Seoul</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u96-4"><!-- content -->
+     <p>Cong Vu, Sata, beatbird, mondaystudio</p>
+    </div>
+    <div class="clearfix colelem" id="pu89-6"><!-- group -->
+     <div class="clearfix grpelem" id="u89-6"><!-- content -->
+      <p>SUBBEATvol03</p>
+      <p>with Seiho</p>
+     </div>
+     <div class="clearfix grpelem" id="u90-6"><!-- content -->
+      <p>2014-07-11 FRI</p>
+      <p>Cakeshop Seoul</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u104-4"><!-- content -->
+     <p>Sima Kim, Cong Vu, beatbird, mondaystudio</p>
+    </div>
+    <div class="clearfix colelem" id="pu107-8"><!-- group -->
+     <div class="clearfix grpelem" id="u107-8"><!-- content -->
+      <p>SUBBEATvol02</p>
+      <p>introducing j~wave</p>
+      <p>with mus.hiba</p>
+     </div>
+     <div class="clearfix grpelem" id="u105-6"><!-- content -->
+      <p>2014-04-04 FRI</p>
+      <p>Cakeshop Seoul</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u106-4"><!-- content -->
+     <p>LOBOTOMY, Sima Kim, asceticaudio., beatbird, mondaystudio</p>
     </div>
     <div class="clearfix colelem" id="pu108-6"><!-- group -->
      <div class="clearfix grpelem" id="u108-6"><!-- content -->
