10/23 SUBBEAT 티져 업데이트
10/23 SUBBEAT 티져 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museredirect.js", "jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "index.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "museredirect.js", "index.css"], "outOfDate":[]};
 </script>
   
   <script src="scripts/museredirect.js?4117159434" type="text/javascript"></script>
@@ -18,7 +18,7 @@
   <link media="only screen and (max-device-width: 370px)" rel="alternate" href="http://subbe.at/phone/index.html"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4047461162"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3944616292" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?158587604" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -55,8 +55,21 @@
       <div class="clearfix colelem" id="u111-4"><!-- content -->
        <p>Upcoming Events:</p>
       </div>
+      <div class="clearfix colelem" id="pu206-6"><!-- group -->
+       <a class="nonblock nontext Link clearfix grpelem" id="u206-6" href="https://www.facebook.com/events/658757987588526/" target="_blank"><!-- content --><p>SUBBEAT vs</p><p>VERY SPECIAL GUESTS</p></a>
+       <div class="clearfix grpelem" id="u207-6"><!-- content -->
+        <p>2015-10-23 FRI</p>
+        <p>Cakeshop Seoul</p>
+       </div>
+      </div>
+      <div class="clearfix colelem" id="u205-4"><!-- content -->
+       <p>SUBBEAT crews &amp; VERY SPECIAL GUESTS</p>
+      </div>
+      <div class="clearfix colelem" id="u82-4"><!-- content -->
+       <p>Past Events:</p>
+      </div>
       <div class="clearfix colelem" id="pu80-10"><!-- group -->
-       <a class="nonblock nontext Link clearfix grpelem" id="u80-10" href="https://www.facebook.com/events/678876412212742/" target="_blank"><!-- content --><p>SUBBEAT w/</p><p>TREKKIE TRAX</p><p>(Capainter, Seimei)</p><p id="u80-8">+ Seimei's &quot;Out Of Resistance&quot; Release Tour</p></a>
+       <a class="nonblock nontext Link clearfix grpelem" id="u80-10" href="https://www.facebook.com/events/678876412212742/" target="_blank"><!-- content --><p>SUBBEAT w/</p><p>TREKKIE TRAX</p><p>(Capainter, Seimei)</p><p id="u80-8">+ Carpainter's &quot;Out Of Resistance&quot; Release Tour</p></a>
        <div class="clearfix grpelem" id="u81-6"><!-- content -->
         <p>2015-07-24 FRI</p>
         <p>Cakeshop Seoul</p>
@@ -64,9 +77,6 @@
       </div>
       <div class="clearfix colelem" id="u94-4"><!-- content -->
        <p>Carpainter, Seimei, YonYon, mondaystudio, LOBOTOMY, beatbird</p>
-      </div>
-      <div class="clearfix colelem" id="u82-4"><!-- content -->
-       <p>Past Events:</p>
       </div>
       <div class="clearfix colelem" id="pu185-6"><!-- group -->
        <a class="nonblock nontext Link clearfix grpelem" id="u185-6" href="https://www.facebook.com/events/658757987588526/" target="_blank"><!-- content --><p>SUBBEAT w/</p><p>AIR MAX '97</p></a>
@@ -108,20 +118,20 @@
       <div class="clearfix colelem" id="u95-4"><!-- content -->
        <p>Quandol, Andow, Cong Vu b2b Sata, LOBOTOMY, Jewa Lee b2b Jayroh, beatbird b2b mondaystudio</p>
       </div>
-      <div class="clearfix colelem" id="pu117-6"><!-- group -->
-       <div class="clearfix grpelem" id="u117-6"><!-- content -->
-        <p>SUBSTANCEvol01</p>
-        <p>with Howie Lee</p>
-       </div>
-       <div class="clearfix grpelem" id="u118-6"><!-- content -->
-        <p>2014-09-19 FRI</p>
-        <p>Cakeshop Seoul</p>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="u119-4"><!-- content -->
-       <p>LOBOTOMY, F.W.D., beatbird, mondaystudio</p>
-      </div>
      </div>
+    </div>
+    <div class="clearfix colelem" id="pu117-6"><!-- group -->
+     <div class="clearfix grpelem" id="u117-6"><!-- content -->
+      <p>SUBSTANCEvol01</p>
+      <p>with Howie Lee</p>
+     </div>
+     <div class="clearfix grpelem" id="u118-6"><!-- content -->
+      <p>2014-09-19 FRI</p>
+      <p>Cakeshop Seoul</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="u119-4"><!-- content -->
+     <p>LOBOTOMY, F.W.D., beatbird, mondaystudio</p>
     </div>
     <div class="clearfix colelem" id="pu85-6"><!-- group -->
      <div class="clearfix grpelem" id="u85-6"><!-- content -->
